--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -88,6 +88,7 @@ jobs:
         run: |
           cargo test
           
+          # TODO more
           curl https://esm.sh/v128/react-dom@18.2.0/es2022/react-dom.mjs > react.js
           cargo run -p ezno-parser --example parse react.js
         working-directory: parser
@@ -95,12 +96,19 @@ jobs:
       - name: Run checker specification
         if: (steps.changes.outputs.checker == 'true' && github.event_name != 'pull_request') || github.ref_name == 'main'
         run: cargo test
-        working-directory: checker/specification
       
       - name: Run checker specification (w/ staging)
         if: steps.changes.outputs.checker == 'true' && github.event_name == 'pull_request'
-        run: cargo test -F staging
-        working-directory: checker/specification
+        run: cargo test -F staging -p ezno-checker-specification
+        env:
+          EZNO_DEBUG: 1
+      
+      - name: Run checker specification (just to implement)
+        continue-on-error: true
+        if: steps.changes.outputs.checker == 'true' && github.event_name == 'pull_request'
+        run: |
+          # Aim of this test is to catch anything that may have been fixed in this next commit or any bad regressions (stack overflows)
+          cargo test --no-default-features -F to_implement -p ezno-checker-specification
         env:
           EZNO_DEBUG: 1
 
@@ -108,10 +116,9 @@ jobs:
         if: steps.changes.outputs.checker == 'true' || github.ref_name == 'main'
         run: |
           # Test checker with the parser features
-          cargo test -F ezno-parser 
-        working-directory: checker
+          cargo test -F ezno-parser -p ezno-checker
 
-      - name: Run base tests
+      - name: Run CLI and base tests
         run: cargo test
 
   extras:
@@ -126,7 +133,7 @@ jobs:
         with:
           path: ${{ env.CACHE_PATHS }}
           key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-      
+     
       - uses: dorny/paths-filter@v3
         id: changes
         with:
@@ -190,6 +197,7 @@ jobs:
         working-directory: src/js-cli-and-library
         shell: bash
 
+      # WIP
       - uses: actions/upload-artifact@v4
         if: steps.changes.outputs.src == 'true' || github.ref_name == 'main'
         with:
@@ -347,3 +355,15 @@ jobs:
             fi
           done
         shell: bash
+
+  performance-and-size:
+    # WIP
+    runs-on: ubuntu-latest
+    steps:
+      - name: Kick off other workflow if the PR has a label
+        if: github.ref_name != 'main' && contains(github.event.pull_request.labels.*.name, 'compiler-performance')
+        run: |
+          echo "head_ref: ${{ github.head_ref }}, ref_name: ${{ github.ref_name }}"
+          gh workflow run performance-and-size.yml --ref ${{ github.ref_name }}
+        env:
+          GH_TOKEN: ${{ github.token }}
