--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ members = [
 
 [package]
 name = "ezno"
-description = "A JavaScript type checker and compiler. For use as a library or through the CLI"
+description = "A fast, rich and correct TypeScript type checker and compiler. For use as a library or through the CLI"
 authors = ["Ben <kaleidawave@gmail.com>"]
 version = "0.0.22"
 edition = "2021"
