--- a/src/js-cli-and-library/package.json
+++ b/src/js-cli-and-library/package.json
@@ -20,8 +20,8 @@
 	},
 	"scripts": {
 		"clean": "rmdir dist && rmdir build",
-		"build": "wasm-pack build --dev --out-dir src/js-cli-and-library/build --target web --no-pack && npm run build-js",
-		"build-release": "wasm-pack build --release --out-dir src/js-cli-and-library/build --target web --no-pack && npm run build-js",
+		"build": "wasm-pack build --dev --target web --no-pack --out-dir src/js-cli-and-library/build && npm run build-js",
+		"build-release": "wasm-pack build --release --target web --no-pack --out-dir src/js-cli-and-library/build && npm run build-js",
 		"--": "Manually assembles the output",
 		"build-manual-bind": "cargo build --lib --target wasm32-unknown-unknown --profile debug && wasm-bindgen --out-dir build --target web ../../target/wasm32-unknown-unknown/debug/ezno_lib.wasm && npm run build-js",
 		"build-js": "unbuild && cp ./build/ezno_lib_bg.wasm dist/shared && cp src/cli_node.cjs dist/cli.cjs",
