--- a/src/js-cli-and-library/package.json
+++ b/src/js-cli-and-library/package.json
@@ -26,7 +26,7 @@
 		"build-manual-bind": "cargo build --lib --target wasm32-unknown-unknown --profile debug && wasm-bindgen --out-dir build --target web ../../target/wasm32-unknown-unknown/debug/ezno_lib.wasm && npm run build-js",
 		"build-js": "unbuild && cp ./build/ezno_lib_bg.wasm dist/shared && cp src/cli_node.cjs dist/cli.cjs",
 		"test": "npm run build && npm run run-tests",
-		"run-tests": "node test.mjs && deno run -A test.mjs"
+		"run-tests": "node --test"
 	},
 	"keywords": [
 		"typescript",
@@ -74,7 +74,8 @@
 		}
 	},
 	"devDependencies": {
-    "unbuild": "^2.0.0",
-    "wasm-pack": "^0.13.0"
+		"unbuild": "^2.0.0",
+		"wasm-pack": "^0.13.0",
+		"strip-ansi": "^7.1.0"
 	}
 }
