--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,6 @@ base64 = "0.21"
 console = "0.15"
 codespan-reporting = "0.11"
 enum-variants-strings = "0.3"
-glob = "0.3"
 # For `StrComparison` for string comparison
 pretty_assertions = "1.3.0"
 serde = { version = "1.0", features = ["derive"] }
@@ -59,6 +58,8 @@ native-tls = "0.2.11"
 multiline-term-input = "0.1.0"
 # For watching files
 notify = "6.1.0"
+notify-debouncer-full = "0.3.1"
+glob = "0.3"
 
 [dependencies.checker]
 path = "./checker"
