--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -366,10 +366,6 @@ jobs:
       - uses: actions/checkout@v4
       - name: Kick off other workflow if the PR has a label
         if: github.ref_name != 'main' && contains(github.event.pull_request.labels.*.name, 'compiler-performance')
-        run: |
-          COMMIT_ID=$(git rev-parse HEAD)
-          BRANCH=$(git rev-parse --abbrev-ref HEAD)
-          echo "head_ref: ${{ github.head_ref }}, ref_name: ${{ github.ref_name }}, ref: ${{ github.ref }}, ${{ github.event.head_commit.id }}, tree_id: ${{ github.event.head_commit.tree_id }}, commit: $COMMIT_ID, branch: $BRANCH"
-          gh workflow run performance-and-size.yml --ref "$BRANCH"
+        run: gh workflow run performance-and-size.yml --ref "${{ github.head_ref }}"
         env:
           GH_TOKEN: ${{ github.token }}
