--- a/.github/workflows/clippy-rustfmt-fix.yml
+++ b/.github/workflows/clippy-rustfmt-fix.yml
@@ -12,7 +12,7 @@ env:
     target/
 
 jobs:
-  publish:
+  run-and-commit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -23,15 +23,19 @@ jobs:
       
       - name: Run automated fixes
         run: |
-          cargo clippy --fix
+          # Run clippy on projects
+          cargo clippy --fix --manifest-path ./parser/Cargo.toml --allow-dirty
+          cargo clippy --fix --manifest-path ./checker/Cargo.toml --allow-dirty
+          cargo clippy --fix --allow-dirty
+
+          # Format
           cargo fmt
 
-      - name: Commit
+      - name: Commit changes
         run: |
-          git add .
-          git commit -m "Run clippy --fix & formatting"
-
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        
+
+          git add .
+          git commit -m "Run clippy --fix & cargo fmt"
           git push
