--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ members = [
 
 [package]
 name = "ezno"
-description = "A JavaScript type checker and compiler. For use as a library or through the CLI"
+description = "A fast and correct TypeScript type checker and compiler with additional experiments. For use as a library or through the CLI"
 authors = ["Ben <kaleidawave@gmail.com>"]
 version = "0.0.22"
 edition = "2021"
@@ -48,6 +48,7 @@ pretty_assertions = "1.3.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 simple-json-parser = "0.0.2"
+js-sys = "0.3"
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 # For updating binary
