Fixes to workflows

--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -37,13 +37,15 @@ jobs:
         env:
           CARGO_PROFILE_RELEASE_DEBUG: true
 
-      - name: Get base ezno
-        if: github.ref_name != 'main'
-        uses: actions/download-artifact@v4
-        continue-on-error: true
-        with:
-          name: latest-checker
-          path: previous-ezno
+      # TODO need to lookup existing workflow on main
+      # even if this worked, it might have issues with newer features added in this run
+      # - name: Get base ezno
+      #   if: github.ref_name != 'main'
+      #   uses: actions/download-artifact@v4
+      #   continue-on-error: true
+      #   with:
+      #     name: latest-checker
+      #     path: previous-ezno
 
       - name: Set compilers
         id: compilers
@@ -197,16 +199,16 @@ jobs:
             curl -sS $url > input.js
 
             echo "::group::Comparison"
-            hyperfine \
+            hyperfine -i \
               -L compiler ${{ steps.compilers.outputs.BINARIES }} \
               '{compiler} ast-explorer full input.js --timings'
             echo "::endgroup::"
           done
 
-      - name: Upload checker
-        if: github.ref == 'main'
-        uses: actions/upload-artifact@v4
-        with:
-          name: latest-checker
-          path: target/release/ezno
-          retention-days: 90
+      # - name: Upload checker
+      #   if: github.ref == 'main'
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: latest-checker
+      #     path: target/release/ezno
+      #     retention-days: 90
