--- a/src/playground/package.json
+++ b/src/playground/package.json
@@ -10,11 +10,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.2.12",
     "lz-string": "^1.5.0",
     "marked": "^10.0.0",
     "shiki": "^0.14.7",
-    "typescript": "5.3"
+    "typescript": "5.3",
+    "vite": "^5.2.12"
   },
   "dependencies": {
     "@codemirror/commands": "^6.3.3",
@@ -25,6 +25,6 @@
     "@codemirror/view": "^6.23.0",
     "@lezer/highlight": "^1.2.0",
     "@lezer/javascript": "^1.4.13",
-    "ezno": "^0.0.22"
+    "ezno": "^0.0.23"
   }
 }
