--- a/checker/specification/Cargo.toml
+++ b/checker/specification/Cargo.toml
@@ -23,3 +23,6 @@ checker = { path = "..", version = "*", package = "ezno-checker", features = [
 ] }
 parser = { path = "../../parser", version = "*", package = "ezno-parser" }
 pretty_assertions = "1.3.0"
+
+# TODO dev dependency
+simple-markdown-parser = { git = "https://github.com/kaleidawave/simple-markdown-parser.git", version = "0.0.0" }
