--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,6 +81,9 @@ console_error_panic_hook = "0.1.7"
 js-sys = "0.3"
 tsify = "0.4.5"
 
+[dev-dependencies]
+pretty_assertions = "1.3.0"
+
 [workspace.lints.clippy]
 all = { level = "deny", priority = -1 }
 pedantic = { level = "deny", priority = -1 }
