--- a/checker/Cargo.toml
+++ b/checker/Cargo.toml
@@ -46,8 +46,7 @@ simple-json-parser = "0.0.2"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 tsify = "0.4.5"
-# TODO needs unfixed change in source-map
-wasm-bindgen = "=0.2.89"
+wasm-bindgen = "0.2"
 
 [dependencies.parser]
 path = "../parser"
