--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -179,6 +179,8 @@ jobs:
         run: |
           IFS=',' read -ra ITEMS <<< ${{ steps.compilers.outputs.BINARIES }}
 
+          export RUST_BACKTRACE=1
+
           for compiler in ${ITEMS[@]}; do
             echo "::group::Running $compiler"
             
