Update fuzz lock files + performance script fix around valgrind

--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -27,7 +27,7 @@ jobs:
 
       - uses: brndnmtthws/rust-action-cargo-binstall@v1
         with:
-          packages: hyperfine
+          packages: hyperfine ripgrep
       
       - name: Install valgrind
         run: sudo apt-get install valgrind
@@ -185,15 +185,17 @@ jobs:
             echo "::group::Running $compiler"
             
             echo "::group::Callgrind"
-            valgrind --tool=callgrind --callgrind-out-file=cpu-out $compiler check demo.tsx --max-diagnostics 0 | true
-            echo "CPU usage:"
-            head -n100 cpu-out
+            {
+              valgrind --tool=callgrind --callgrind-out-file=cpu-out $compiler check demo.tsx --max-diagnostics 0
+            } || true
+            echo "::notice::CPU usage:$(rg "summary: (.*)" -or '$1' -N --color never cpu_out)"
             echo "::endgroup::"
-  
+            
             echo "::group::Valgrind"
-            valgrind --log-file=memory-out $compiler check demo.tsx --max-diagnostics 0 | true
-            echo "Memory usage:"
-            cat memory-out
+            {
+              valgrind --log-file=memory-out $compiler check demo.tsx --max-diagnostics 0
+            } || true
+            echo "::notice::Memory usage:$(rg "([0-9,]*) bytes allocated" -or '$1' -N --color never memory-out)"
             echo "::endgroup::"
 
             echo "::endgroup::"
