--- a/checker/Cargo.toml
+++ b/checker/Cargo.toml
@@ -38,16 +38,14 @@ iterator-endiate = "0.2"
 path-absolutize = { version = "3.0", features = ["use_unix_paths_on_wasm"] }
 either = "1.6"
 levenshtein = "1"
-ordered-float = "4.2"
 regress = { version = "0.10", features = ["utf16"] }
 
 serde = { version = "1.0", features = ["derive"], optional = true }
-simple-json-parser = "0.0.2"
+simple-json-parser = "0.0"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
-tsify = "0.4.5"
-# TODO needs unfixed change in source-map
-wasm-bindgen = "=0.2.89"
+tsify = "0.4"
+wasm-bindgen = "0.2"
 
 [dependencies.parser]
 path = "../parser"
